// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should render <Stats /> with custom CSS classes 1`] = `
Array [
  <div
    className="root"
  >
    Array [
      <span
        className="text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "1 result found in ms",
          }
        }
      />,
    ]
  </div>,
]
`;

exports[`Stats should render <Template data= /> 1`] = `
Array [
  <div
    className="root"
  >
    Array [
      <span
        className="text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "results found in 42ms",
          }
        }
      />,
    ]
  </div>,
]
`;
